--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -25,8 +25,8 @@
       {% elif current_user.role == 'manager' %}
         <li><a href="{{ url_for('members.list_members') }}">Manage Members</a></li>
         <li><a href="{{ url_for('trainers.list_trainers') }}">Manage Trainers</a></li>
-        <li><a href="{{ url_for('classes.view_classes') }}">Manage Classes</a></li>
-        <li><a href="{{ url_for('staff.view_staff') }}">Manage Staff</a></li>
+        <li><a href="{{ url_for('classes.list_classes') }}">Manage Classes</a></li>
+        <li><a href="{{ url_for('staff.list_staff') }}">Manage Staff</a></li>
         <li><a href="{{ url_for('maintenance.get_logs') }}">Manage Maintenance Logs</a></li>
     
       {% elif current_user.role == 'trainer' %}
